# cpg-sales-insights

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md  extension-guide.md
docs/adr/: 001-star-schema-over-snowflake.md  002-llm-provider-interface.md  003-whitelisted-query-chatbot.md
docs/brief/: FAQ - AIA.xlsx
methodology/: time-log.md
src/cpg_insights/: __init__.py  config.py
src/cpg_insights/api/: app.py  deps.py  schemas.py
src/cpg_insights/api/routers/: anomalies.py  data_quality.py  forecast.py  ingest.py  insights.py  metrics.py
src/cpg_insights/data_gen/: generate.py  products.py  stores.py
src/cpg_insights/db/: connection.py  schema.py
src/cpg_insights/forecasting/: anomaly.py  features.py  model.py  train.py
src/cpg_insights/llm/: __init__.py  base.py  gemini.py  insights.py  mock.py
src/cpg_insights/pipeline/: dedupe.py  extract.py  load.py  run.py  transform.py  validate.py
tests/: conftest.py
tests/unit/: test_api.py  test_config.py  test_data_gen.py  test_forecasting.py  test_llm.py  test_pipeline.py
